change log sindesi firebase login

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,3 +32,4 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.android.gms:play-services:11.4.2'
 }
+apply plugin: 'com.google.gms.google-services'
