--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".ShopperLoginActivity"></activity>
+        <activity android:name=".ShopperLoginActivity" />
+        <activity android:name=".ShopperRegisterActivity"></activity>
     </application>
 
 </manifest>
