--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".ShopperLoginActivity" />
         <activity android:name=".ShopperRegisterActivity" />
-        <activity android:name=".ShopProfileActivity"></activity>
+        <activity android:name=".ShopProfileActivity" />
+        <activity android:name=".AddNewProductOffer"></activity>
     </application>
 
 </manifest>
