--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.android.gms:play-services:11.4.2'
+    compile 'com.facebook.android:facebook-login:[4,5)'
 }
 apply plugin: 'com.google.gms.google-services'
