shop's register activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,8 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShopperLoginActivity"></activity>
+        <activity android:name=".ShopperLoginActivity" />
+        <activity android:name=".ShopperRegisterActivity"></activity>
     </application>
 
 </manifest>
