--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ShopperLoginActivity" />
-        <activity android:name=".ShopperRegisterActivity"></activity>
+        <activity android:name=".ShopperRegisterActivity" />
+        <activity android:name=".ShopProfileActivity"></activity>
     </application>
 
 </manifest>
