--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,8 @@
         </activity>
         <activity android:name=".ShopperLoginActivity" />
         <activity android:name=".ShopperRegisterActivity" />
-        <activity android:name=".ShopProfileActivity"></activity>
+        <activity android:name=".ShopProfileActivity" />
+        <activity android:name=".AddNewProductOfferActivity"></activity>
     </application>
 
 </manifest>
