--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.android.gms:play-services:11.6.0'
     compile 'com.facebook.android:facebook-login:[4,5)'
+    compile 'com.google.firebase:firebase-core:11.6.0'
+    compile 'com.google.firebase:firebase-database:11.6.0'
 }
 apply plugin: 'com.google.gms.google-services'
