--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,11 @@ dependencies {
     compile 'com.facebook.android:facebook-login:[4,5)'
     compile 'com.google.firebase:firebase-core:11.6.0'
     compile 'com.google.firebase:firebase-database:11.6.0'
+
+    //For menu UI by peter
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    //
 }
 apply plugin: 'com.google.gms.google-services'
