--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,16 +25,17 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.android.gms:play-services-maps:11.6.0'
+    implementation 'com.google.android.gms:play-services-maps:11.0.4'
+    implementation 'com.google.firebase:firebase-auth:11.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.google.android.gms:play-services:11.6.0'
-    compile 'com.facebook.android:facebook-login:[4,5)'
-    compile 'com.google.firebase:firebase-core:11.6.0'
-    compile 'com.google.firebase:firebase-database:11.6.0'
+    compile 'com.google.android.gms:play-services:11.0.4'
+    compile 'com.facebook.android:facebook-login:[4,28.0)'
+    compile 'com.google.firebase:firebase-core:11.0.4'
+    compile 'com.google.firebase:firebase-database:11.0.4'
 
     //For menu UI by peter
     compile 'com.android.support:appcompat-v7:26.1.0'
